# agent-harness

./: .gitignore  ACKNOWLEDGEMENTS.md  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HARNESS.md  LICENSE  MAINTAINING.md  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/: CODEOWNERS  agent-go.yml  dependabot.yml  labels.yml  pull_request_template.md  zizmor.yml
config/: adapter-compatibility.yaml  agent-fabric.yaml  console-acceptance-delivery-requirements.v1.json  console-acceptance-evidence-selector-registry.v1.json  delivery-profiles.json  model-routing.json  risk-policy.json  security-evidence.json  skill-renames.json  spec05-delivery-requirements.v1.json  spec05-evidence-selector-registry.v1.json
docs/: ARCHITECTURE.md  worktrees.md
evals/: delivery-profile-scenarios.yaml  lifecycle-routing.yaml
runtime/: README.md
scripts/: agent-fabric  agent-fabric-mcp  agent-fabric-warm  check-harness  check-skill-javascript  check_harness.py  check_spec_families.py  check_specs.py  configure-agent-fabric-mcp.py  configure-codex-skill-overrides.py  git_evidence.py  install-harness  install-skills  install-workflows  manage_installation.py  managed_installation_manifest.py  managed_link_identity.py  model-route  model_route.py  provenant  provision-agy-cli  public-release-check  public_release_check.py  render_skill_catalogue.py  static-security-check.py  validate_delivery_scenarios.py  validate_lifecycle_routing.py  validate_skill_routing_evaluation.py  worktree  worktree.py
(+1890 files in other folders)
